# CollectCTIFeeds

./: .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml  telegram-sdk-research.md  telegram-search-techniques.md
config/: telegram.session.example.json
docs/: botkit.md  codex-handoff.md  config-file.md  en-searchbot-integration.md  example-script.md  onboarding.md  sdk-scaffold.md  telethon-adapter.md  tool-schema.md
examples/: botkit_en_searchbot.py  en_searchbot_search.py  telethon_keyword_search.py  use_en_searchbot_sdk.py
sdk/: __init__.py  client.py  config.py  errors.py  models.py  references.py  tool_schema.py  transports.py
sdk/adapters/: __init__.py  memory.py  telethon.py
sdk/botkit/: __init__.py  base.py  checkpoints.py  contracts.py  errors.py  models.py  registry.py  sdk.py
sdk/botkit/adapters/: __init__.py  en_searchbot.py  monitoring.py
sdk/services/: __init__.py  bot_search.py  bots.py  chats.py  search.py
sdk/session/: __init__.py  memory.py  redis.py
sdk/workflows/: __init__.py  discovery.py
tests/: test_bot_search_service.py  test_reference_tools.py  test_telegram_sdk_botkit.py  test_tool_schema.py
