[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-sdk"
version = "0.1.0"
description = "Clean Telegram SDK scaffold for search, chat, and bot workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]
dependencies = [
  "telethon>=1.42,<2",
]

[tool.setuptools]
packages = [
  "sdk",
  "sdk.adapters",
  "sdk.botkit",
  "sdk.botkit.adapters",
  "sdk.services",
  "sdk.session",
  "sdk.workflows",
]
